<resources>
    <string name="app_name">SusaetaOn</string>
    <string name="goToLibrary">Ir a la biblioteca</string>
    <string name="validateCode">Validar código</string>
    <string name="scholarshipPeriod" translatable="false">2017 - 2018</string>
    <string name="validate">Validar</string>
    <string name="network_unavailable">No es posible establecer conexion de red</string>
    <string name="downloading_progress_message">Downloading...</string>
    <string name="search_hint">Ir a la pagina</string>
    <string name="get_serial_code">Para obtener información de como adquirir un código serial para el uso de este APP, puede dirigirse al correo electrónico susaetaon@susaeta.com.do o pornerse en contacto con nuestro servicio técnico en el teléfono para Whatsapp 829-748-9081.</string>
</resources>
