<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.susaeta.susaetaon.controller.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="1199dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_tapestry"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/schoolarshipYear"
        android:layout_width="202dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:text="@string/scholarshipPeriod"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/validateCodeButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="64dp"
        android:background="@color/button_color"
        android:contentDescription="@null"
        android:text="@string/validateCode"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolarshipYear" />

    <Button
        android:id="@+id/goToLibraryButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@color/button_color"
        android:contentDescription="@null"
        android:text="@string/goToLibrary"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/validateCodeButton"
        app:layout_constraintStart_toStartOf="@+id/validateCodeButton"
        app:layout_constraintTop_toBottomOf="@+id/validateCodeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>